# oh-ai-car-web

./: .env.development  .env.example  .gitattributes  .gitignore  AGENTS.md  AI_CONTEXT.md  COURSE_STATUS.md  Dockerfile.backend  Dockerfile.frontend  NEXT_SESSION.md  PROTOCOL_STATUS.md  README.md  REFERENCE.md  docker-compose.yml  package-lock.json  package.json  前后端开发提示词.md  课程状态.md
.specify/: init-options.json  integration.json
backend/: package.json  tsconfig.integration.json  vitest.config.ts  vitest.integration.config.ts
deploy/: nginx.conf
docs/: CI-CD.md  README.md
edge-agent/: agent.env.example  evidence_store.py  goto_scheduler.py  mock_gps_publisher.py  nav_backend.py  nav_supervisor.py  patrol_scheduler.py  plate_vision_agent.py  platform_client.py  pose_agent.py  requirements-plate.txt  requirements.txt  start-plate-vision.sh  start-telemetry.sh  start_all_nav.sh  start_nav_agent.sh  start_plate_local.py  telemetry_agent.py  yolo_plate_adapter.py
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
gateway/: package.json  tsconfig.json
scripts/: .local-plate-task.json  deploy-jetson-gps.py  fake-pose.mjs  jetson-check-gps.py  jetson-debug-upload.py  jetson-gps-probe.sh  jetson-probe-apps.py  jetson-probe-docker.py  jetson-probe-icar.py  jetson-probe.py  jetson-refresh-agent.py  jetson-serial-nmea-probe.py  jetson-start-mock-gps.py  platform-setup-jetson-gps.py  print-dev-stack.mjs  run-python.mjs  seed-wxpush-demo.mjs  setup-env.mjs  (+4 more)
yolo-v5/oh-ai-car-YOLOv5/ros2_ws/src/plate_vision_ros/: package.xml  setup.cfg  setup.py
(+326 files in other folders)
