<?xml version="1.0"?>
<package format="3">
  <name>plate_vision_ros</name>
  <version>0.1.0</version>
  <description>Trigger-based plate detection and OCR bridge for ROS2 Foxy.</description>

  <maintainer email="jfkyx@example.com">jfkyx</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
